# potto

./: Cargo.toml  README.md
docs/: index.html
src/: checker.rs  discovery.rs  lib.rs  main.rs  parser.rs  sync.rs
tests/: integration.rs
